# nomadnet-epub

./: .gitignore  README.md  nomadnet-epub.toml.example  pyproject.toml
src/nomadnet_epub/: __init__.py  __main__.py  catalog.py  cli.py  config.py  convert.py  daemon.py  micron.py  watcher.py
